# pytarok

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix  tox.ini
.github/workflows/: main.yaml
src/pytarok/: card_count.py  card_handling.py  cards.py  game.py
src/pytarok/contract/: three.py
src/pytarok/scripts/: render_graph.py
src/pytarok/tests/: conftest.py  test_card_count.py  test_card_handling.py  test_cards.py
tests/: __init__.py  test_cards.py
