[tool.poetry]
name = "pytarok"
version = "0.1.0"
description = "Tarok card game engine"
authors = ["brodul <<brodul@brodul.org>>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
poetry = "^1.1.7"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
