[tool.poetry]
name = "pytarok"
version = "0.1.0"
description = "Tarok card game engine"
authors = ["brodul <<brodul@brodul.org>>"]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
pre-commit = "^3.2.1"

[tool.poetry.dev-dependencies]
poetry = "^1.4.2"
pytest = "^7.3.1"
pytest-watch = "^4.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
